k8s-yaml/persistent-storage/guestbook-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: guestbook.demo.ytsuboi.local
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
